--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
     <title>Assignment_2</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    <header></header>
+<body class="body">
+    <header class="header">
+        <nav class="navigation">
+            <h3 class="pag_name">Fitness</h3>
+            <ul class="nav_menu">
+                <li class="nav_item" id="home">Home</li>
+                <li class="nav_item">Service</li>
+                <li class="nav_item">Contact</li>
+                <li class="nav_item">About</li>
+            </ul>
+        </nav>
+        <div class="banner">
+            
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
