--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
             </ul>
         </nav>
         <div class="banner">
-            
+            <div class="description">
+                <h1 class="des_title">Get body in <span class="playwrite-cu">shape</span> & stay healthy</h1>
+                <p class="des_subtitle">Achieve a well-shaped body and maintain health through consistent exercise, a balanced diet, and a positive mindset.</p>
+                <div class="button">
+                    <button class="buttn1">Join Club Now!</button>
+                    <button class="buttn2">Download App</button>
+                </div>
+            </div>
+            <img src="images/Images 2.png" alt="" class="banner_img" height="100%">
         </div>
     </header>
     <main></main>
