--- a/index.html
+++ b/index.html
@@ -26,7 +26,21 @@
                     <button class="buttn2">Download App</button>
                 </div>
             </div>
-            <img src="images/Images 2.png" alt="" class="banner_img" height="100%">
+            <div class="banner_img_container">
+                <img src="images/Images 2.png" alt="" class="banner_img" height="100%">
+                <div class="tag_container">
+                    <div class="tute">
+                        <!-- <div class="background"></div> -->
+                        <div class="golla"></div>
+                        <div class="content"><h1 class="content">350+</h1>
+                            <p class="content">Video tutorial</p></div>
+                    </div>
+                    <div class="workout_video">
+                        <h3>500+</h3>
+                        <p>Free workout video</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
     <main></main>
