responsive section updated.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li class="nav_item">Service</li>
                 <li class="nav_item">Contact</li>
                 <li class="nav_item">About</li>
+                <li id="menu_icon"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></li>
             </ul>
         </nav>
         <div class="banner">
@@ -26,17 +27,20 @@
                     <button class="buttn2">Download App</button>
                 </div>
             </div>
-            <div class="banner_img_container">
+            <div class="banner_img_tags_container">
                 <img src="images/Images 2.png" alt="" class="banner_img" height="100%">
                 <div class="tag_container">
-                    <div class="tute">
+                    <div class="tute" id="tut">
                         <!-- <div class="background"></div> -->
                         <div class="golla"></div>
-                        <div class="content"><h1 class="content">350+</h1>
-                            <p class="content">Video tutorial</p></div>
+                        <div class="content">
+                            <h1 class="content">350+</h1>
+                            <p class="content">Video tutorial</p>
+                        </div>
                     </div>
                     <div class="workout_video">
-                        <h3>500+</h3>
+                        <!-- <div class="background"></div> -->
+                        <h1 id="big">500+</h1>
                         <p>Free workout video</p>
                     </div>
                 </div>
