--- a/index.html
+++ b/index.html
@@ -47,7 +47,37 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main class="main">
+        <section class="habits_section">
+            <div class="habits_description">
+                <h1 class="habits_title">Change Your Habits</h1>
+                <p class="habits_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="habits_container">
+                <div class="habits">
+                    <img src="images/image 3.png" alt="image 1">
+                    <h1 class="habit_title">Movement</h1>
+                    <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habits">
+                    <img src="images/image 2.png" alt="image 2">
+                    <h1 class="habit_title">Time</h1>
+                    <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habits">
+                    <img src="images/image 4.png" alt="image 3">
+                    <h1 class="habit_title">Practice</h1>
+                    <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habits">
+                    <img src="images/image 5.png" alt="image 4">
+                    <h1 class="habit_title">Weight Loss</h1>
+                    <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <footer></footer>
 </body>
 </html>
