run section compleate

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </div>
     </header>
     <main class="main">
+        <!-- habit section -->
         <section class="habits_section">
             <div class="habits_description">
                 <h1 class="habits_title">Change Your Habits</h1>
@@ -76,6 +77,16 @@
                 </div>
             </div>
         </section>
+        <!-- Run section -->
+         <section class="run_section">
+            <div class="run_description">
+                <h1 class="run_title">Run an Extra 
+                    Mile Easily</h1>
+                <p class="run_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <button class="runbtn">Join Now</button>
+            </div>
+            <img src="images/run.jpg" alt="" class="run_img" height="100%">
+         </section>
     </main>
 
     <footer></footer>
