Adding Training section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,22 @@
             </div>
             <img src="images/run.jpg" alt="" class="run_img" height="100%">
          </section>
+         <!-- Trainings section -->
+          <section class="trainings_section">
+            <div class="trainings_description">
+                <h1 class="trainings_title">Trainings and Exercises</h1>
+                <p class="trainings_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</trainings_subtitle>
+            </div>
+            <div class="img_div_container">
+                <div id="img_container_1" class="img_container"></div>
+                <div id="img_container_2" class="img_container"></div>
+                <div id="img_container_3" class="img_container"></div>
+                <div id="img_container_4" class="img_container"></div>
+                <div id="img_container_5" class="img_container"></div>
+                <div id="img_container_6" class="img_container"></div>
+            </div>
+            
+          </section>
     </main>
 
     <footer></footer>
