Training and Execrise section compleate

--- a/index.html
+++ b/index.html
@@ -94,12 +94,36 @@
                 <p class="trainings_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</trainings_subtitle>
             </div>
             <div class="img_div_container">
-                <div id="img_container_1" class="img_container"></div>
-                <div id="img_container_2" class="img_container"></div>
-                <div id="img_container_3" class="img_container"></div>
-                <div id="img_container_4" class="img_container"></div>
-                <div id="img_container_5" class="img_container"></div>
-                <div id="img_container_6" class="img_container"></div>
+                <div id="img_container_1" class="img_container">
+                    <div class="img_overlay_1">
+                        <h1>hatu</h1>
+                    </div>
+                </div>
+                <div id="img_container_2" class="img_container">
+                    <div class="img_overlay_2">
+                        <h1>Push UPPPP...</h1>
+                    </div>
+                </div>
+                <div id="img_container_3" class="img_container">
+                    <div class="img_overlay_3">
+                        <h1>jumps</h1>
+                    </div>
+                </div>
+                <div id="img_container_4" class="img_container">
+                    <div class="img_overlay_4">
+                        <h1>Leg press</h1>
+                    </div>
+                </div>
+                <div id="img_container_5" class="img_container">
+                    <div class="img_overlay_5">
+                        <h1>Gluts</h1>
+                    </div>
+                </div>
+                <div id="img_container_6" class="img_container">
+                    <div class="img_overlay_6">
+                        <h1>cycle</h1>
+                    </div>
+                </div>
             </div>
             
           </section>
