added BMI cacluator section

--- a/index.html
+++ b/index.html
@@ -49,34 +49,35 @@
     </header>
     <main class="main">
         <!-- habit section -->
-        <section class="habits_section">
-            <div class="habits_description">
-                <h1 class="habits_title">Change Your Habits</h1>
-                <p class="habits_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
-            </div>
-            <div class="habits_container">
-                <div class="habits">
-                    <img src="images/image 3.png" alt="image 1">
-                    <h1 class="habit_title">Movement</h1>
-                    <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+         <section class="habits_section">
+                <div class="habits_description">
+                    <h1 class="habits_title">Change Your Habits</h1>
+                    <p class="habits_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
                 </div>
-                <div class="habits">
-                    <img src="images/image 2.png" alt="image 2">
-                    <h1 class="habit_title">Time</h1>
-                    <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                <div class="habits_container">
+                    <div class="habits">
+                        <img src="images/image 3.png" alt="image 1">
+                        <h1 class="habit_title">Movement</h1>
+                        <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="habits">
+                        <img src="images/image 2.png" alt="image 2">
+                        <h1 class="habit_title">Time</h1>
+                        <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="habits">
+                        <img src="images/image 4.png" alt="image 3">
+                        <h1 class="habit_title">Practice</h1>
+                        <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="habits">
+                        <img src="images/image 5.png" alt="image 4">
+                        <h1 class="habit_title">Weight Loss</h1>
+                        <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                    </div>
                 </div>
-                <div class="habits">
-                    <img src="images/image 4.png" alt="image 3">
-                    <h1 class="habit_title">Practice</h1>
-                    <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
-                </div>
-                <div class="habits">
-                    <img src="images/image 5.png" alt="image 4">
-                    <h1 class="habit_title">Weight Loss</h1>
-                    <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
-                </div>
-            </div>
-        </section>
+         </section>
+        <!-- habit section -->
         <!-- Run section -->
          <section class="run_section">
             <div class="run_description">
@@ -87,8 +88,9 @@
             </div>
             <img src="images/run.jpg" alt="" class="run_img" height="100%">
          </section>
-         <!-- Trainings section -->
-          <section class="trainings_section">
+        <!-- Run section -->
+        <!-- Trainings section -->
+         <section class="trainings_section">
             <div class="trainings_description">
                 <h1 class="trainings_title">Trainings and Exercises</h1>
                 <p class="trainings_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</trainings_subtitle>
@@ -126,7 +128,69 @@
                 </div>
             </div>
             
-          </section>
+         </section>
+        <!-- Trainings section -->
+        <!-- BMI calculator section. -->
+         <section class="calculator">
+            <div class="calculator_title_subtitle">
+                <h1 class="cal_title">BMI Calculator</h1>
+                <p class="cal_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="chart_container">
+                <div class="calculator_and_chart">
+                    <div class="chart">
+                        <table class="table">
+                            <h3 class="common_title">BMI calculator chart</h3>
+                            <tr>
+                                <th>BMI</th>
+                                <th>Weight Status</th>
+                            </tr>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Under weight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5 - 24.9</td>
+                                <td>Healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25.0 - 29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0 - above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="calculate">
+                        <h3 class="common_title">Calculate Your BMI</h3>
+                        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                        <div class="options">
+                            <div class="option1 option">
+                                <p>Height/cm</p>
+                            </div>
+                            <div class="option2 option">
+                                <p>Width/kg</p>
+                            </div>
+                            <div class="option3 option">
+                                <p>Age</p>
+                            </div>
+                            <div class="option4 option">
+                                <p>Sex</p>
+                                <select></select>
+                            </div>
+                            <div class="option5 option">
+                                <p>Select an activity factor</p>
+                                <select></select>
+                            </div>
+                        </div>
+                        <button class="calculate_btn">Calculate</button>
+                    </div>
+                </div>
+            </div>
+         </section>
+        <!-- BMI calculator section. -->
     </main>
 
     <footer></footer>
