added our team section

--- a/index.html
+++ b/index.html
@@ -191,6 +191,52 @@
             </div>
          </section>
         <!-- BMI calculator section. -->
+        <!-- Our team section -->
+         <section class="our_team">
+            <div class="team_title_subtitle">
+                <h1 class="team_title">Meet Our Team</h1>
+                <p class="team_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="trainers_container">
+                <div class="trainer_div jerome">
+                    <div class="trainer_overlay">
+                        <h1 class="trainer_name">Jerome Bell</h1>
+                        <p class="trainer_post">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainer_div cameron">
+                    <div class="trainer_overlay">
+                        <h1 class="trainer_name">Cameron Williamson</h1>
+                        <p class="trainer_post">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainer_div darrell">
+                    <div class="trainer_overlay">
+                        <h1 class="trainer_name">Darrell Steward</h1>
+                        <p class="trainer_post">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainer_div dianne">
+                    <div class="trainer_overlay">
+                        <h1 class="trainer_name">Dianne Russel</h1>
+                        <p class="trainer_post">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainer_div cody">
+                    <div class="trainer_overlay">
+                        <h1 class="trainer_name">Cody Fisher</h1>
+                        <p class="trainer_post">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainer_div theresa">
+                    <div class="trainer_overlay">
+                        <h1 class="trainer_name">Theresa Webb</h1>
+                        <p class="trainer_post">Trainer</p>
+                    </div>
+                </div>
+            </div>
+         </section>
+         <!-- Our team section -->
     </main>
 
     <footer></footer>
