--- a/index.html
+++ b/index.html
@@ -238,7 +238,33 @@
          </section>
          <!-- Our team section -->
     </main>
-
-    <footer></footer>
+    <footer class="footer">
+        <section class="footer_details">
+            <div class="div_container">
+                <div class="footer_description">
+                    <h1 id="fitness">Fitness</h1>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                </div>
+                <div class="get_started">
+                    <div>
+                        <h1>Get Started</h1>
+                        <p>Service</p>
+                        <p>Contact Us</p>
+                        <p>Affiliate Program</p>
+                        <p>About Us</p>
+                    </div>
+                    <div>
+                        <h1>Get Started</h1>
+                        <p>Fitness</p>
+                        <p>Platform</p>
+                        <p>Workout Library</p>
+                        <p>App Design</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <p id="all_rights">All rights reserved @Fitness 2024.</p>
+        </section>
+    </footer>
 </body>
 </html>
