--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="body">
     <header class="header">
         <nav class="navigation">
-            <h3 class="pag_name">Fitness</h3>
+            <h3 class="page_name">Fitness</h3>
             <ul class="nav_menu">
                 <li class="nav_item" id="home">Home</li>
                 <li class="nav_item">Service</li>
@@ -56,22 +56,22 @@
                 </div>
                 <div class="habits_container">
                     <div class="habits">
-                        <img src="images/image 3.png" alt="image 1">
+                        <img src="images/image 3.png" alt="Movement image">
                         <h1 class="habit_title">Movement</h1>
                         <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
                     </div>
                     <div class="habits">
-                        <img src="images/image 2.png" alt="image 2">
+                        <img src="images/image 2.png" alt="Time image">
                         <h1 class="habit_title">Time</h1>
                         <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
                     </div>
                     <div class="habits">
-                        <img src="images/image 4.png" alt="image 3">
+                        <img src="images/image 4.png" alt="Practice image">
                         <h1 class="habit_title">Practice</h1>
                         <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
                     </div>
                     <div class="habits">
-                        <img src="images/image 5.png" alt="image 4">
+                        <img src="images/image 5.png" alt="Weight loss image">
                         <h1 class="habit_title">Weight Loss</h1>
                         <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
                     </div>
