--- a/index.html
+++ b/index.html
@@ -236,7 +236,24 @@
                 </div>
             </div>
          </section>
-         <!-- Our team section -->
+        <!-- Our team section -->
+        <!-- Workout section -->
+        <section class="featured_workout">
+            <h1>Featured Workout</h1>
+            <div class="workout_container">
+                <div class="workout_img_div">
+                    <img src="images/workout.jpg" alt="workout image" class="workout_img">
+                    <img src="images/workout_2.jpg" alt="workout2 image" class="workout_img">
+                </div>
+                <div class="workout_details">
+                    <h2>Burn Full Body</h2>
+                    <p class="workout_description">An intense full-body workout to burn calories and build muscle. Perfect for all fitness levels.</p>
+                    <button class="workout_btn">Start workout</button>
+                </div>
+            </div>
+            
+          </section>          
+        <!-- Workout section -->
     </main>
     <footer class="footer">
         <section class="footer_details">
