fixing small mistakes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="body">
     <header class="header">
+        <!-- navigation -->
         <nav class="navigation">
             <h3 class="page_name">Fitness</h3>
             <ul class="nav_menu">
@@ -18,6 +19,9 @@
                 <li id="menu_icon"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></li>
             </ul>
         </nav>
+        <!-- navigation -->
+
+        <!-- banner -->
         <div class="banner">
             <div class="description">
                 <h1 class="des_title">Get body in <span class="playwrite-cu">shape</span> & stay healthy</h1>
@@ -31,21 +35,22 @@
                 <img src="images/Images 2.png" alt="" class="banner_img" height="100%">
                 <div class="tag_container">
                     <div class="tute" id="tut">
-                        <!-- <div class="background"></div> -->
-                        <div class="golla"></div>
+                        <div class="golla">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="2rem" viewBox="0 -960 960 960" width="2rem" fill="#e8eaed" class="play"><path d="M320-200v-560l440 280-440 280Zm80-280Zm0 134 210-134-210-134v268Z"/></svg>
+                        </div>
                         <div class="content">
                             <h1 class="content">350+</h1>
                             <p class="content">Video tutorial</p>
                         </div>
                     </div>
                     <div class="workout_video">
-                        <!-- <div class="background"></div> -->
                         <h1>500+</h1>
                         <p>Free workout video</p>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- banner -->
     </header>
     <main class="main">
         <!-- habit section -->
