--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="body">
     <header class="header">
         <!-- navigation -->
-        <nav class="navigation">
+         <nav class="navigation">
             <h3 class="page_name">Fitness</h3>
             <ul class="nav_menu">
                 <li class="nav_item" id="home">Home</li>
@@ -18,13 +18,13 @@
                 <li class="nav_item">About</li>
                 <li id="menu_icon"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></li>
             </ul>
-        </nav>
+         </nav>
         <!-- navigation -->
 
         <!-- banner -->
-        <div class="banner">
+         <div class="banner">
             <div class="description">
-                <h1 class="des_title">Get body in <span class="playwrite-cu">shape</span> & stay healthy</h1>
+                <h1 class="des_title">Get body in <span class="play_write_cu">shape</span> & stay healthy</h1>
                 <p class="des_subtitle">Achieve a well-shaped body and maintain health through consistent exercise, a balanced diet, and a positive mindset.</p>
                 <div class="button">
                     <button class="buttn1">Join Club Now!</button>
@@ -49,7 +49,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+         </div>
         <!-- banner -->
     </header>
     <main class="main">
@@ -105,32 +105,32 @@
             <div class="img_div_container">
                 <div id="img_container_1" class="img_container">
                     <div class="img_overlay_1">
-                        <h1>hatu</h1>
+                        <h1>Squat: Tones legs and glutes.</h1>
                     </div>
                 </div>
                 <div id="img_container_2" class="img_container">
                     <div class="img_overlay_2">
-                        <h1>Push UPPPP...</h1>
+                        <h1>Push-Up: Strengthens chest and arms.</h1>
                     </div>
                 </div>
                 <div id="img_container_3" class="img_container">
                     <div class="img_overlay_3">
-                        <h1>jumps</h1>
+                        <h1>Jumping Jacks: Improves cardiovascular endurance.</h1>
                     </div>
                 </div>
                 <div id="img_container_4" class="img_container">
                     <div class="img_overlay_4">
-                        <h1>Leg press</h1>
+                        <h1>Hammer Curl: Targets forearm muscles.</h1>
                     </div>
                 </div>
                 <div id="img_container_5" class="img_container">
                     <div class="img_overlay_5">
-                        <h1>Gluts</h1>
+                        <h1>Lunge: Strengthens legs and core.</h1>
                     </div>
                 </div>
                 <div id="img_container_6" class="img_container">
                     <div class="img_overlay_6">
-                        <h1>cycle</h1>
+                        <h1>Crunches: Strengthens abdominal muscles.</h1>
                     </div>
                 </div>
             </div>
