--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
                     <div class="habits">
                         <img src="images/image 3.png" alt="Movement image">
                         <h1 class="habit_title">Movement</h1>
-                        <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                        <p class="habit_subtitle">Motivation drives you to achieve your goals.</p>
                     </div>
                     <div class="habits">
                         <img src="images/image 2.png" alt="Time image">
                         <h1 class="habit_title">Time</h1>
-                        <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                        <p class="habit_subtitle">Time is the most valuable resource.</p>
                     </div>
                     <div class="habits">
                         <img src="images/image 4.png" alt="Practice image">
                         <h1 class="habit_title">Practice</h1>
-                        <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                        <p class="habit_subtitle">Practice leads to improvement and mastery.</p>
                     </div>
                     <div class="habits">
                         <img src="images/image 5.png" alt="Weight loss image">
                         <h1 class="habit_title">Weight Loss</h1>
-                        <p class="habit_subtitle">We believe fitness should be accessible to everyone</p>
+                        <p class="habit_subtitle">Weight loss improves health and energy.</p>
                     </div>
                 </div>
          </section>
@@ -89,7 +89,7 @@
             <div class="run_description">
                 <h1 class="run_title">Run an Extra 
                     Mile Easily</h1>
-                <p class="run_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <p class="run_subtitle">Gradually increase your running distance. Build endurance and stamina over time.</p>
                 <button class="runbtn">Join Now</button>
             </div>
             <img src="images/run.jpg" alt="" class="run_img" height="100%">
@@ -100,7 +100,8 @@
          <section class="trainings_section">
             <div class="trainings_description">
                 <h1 class="trainings_title">Trainings and Exercises</h1>
-                <p class="trainings_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</trainings_subtitle>
+                <p class="trainings_subtitle">
+                    Training and exercise improve strength and fitness. Consistency and variety lead to better results.</trainings_subtitle>
             </div>
             <div class="img_div_container">
                 <div id="img_container_1" class="img_container">
@@ -142,7 +143,9 @@
          <section class="calculator">
             <div class="calculator_title_subtitle">
                 <h1 class="cal_title">BMI Calculator</h1>
-                <p class="cal_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="cal_subtitle">
+                    Calculates body mass index to assess weight status and health.
+                </p>
             </div>
             <div class="chart_container">
                 <div class="calculator_and_chart">
@@ -173,7 +176,7 @@
                     </div>
                     <div class="calculate">
                         <h3 class="common_title">Calculate Your BMI</h3>
-                        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                        <p>Calculate your BMI to assess weight status, health risks, fitness levels, and overall well-being. </p>
                         <div class="options">
                             <div class="option1 option">
                                 <p>Height/cm</p>
@@ -204,7 +207,7 @@
          <section class="our_team">
             <div class="team_title_subtitle">
                 <h1 class="team_title">Meet Our Team</h1>
-                <p class="team_subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="team_subtitle">Meet our team of experts dedicated to your health and fitness.</p>
             </div>
             <div class="trainers_container">
                 <div class="trainer_div jerome">
@@ -270,7 +273,7 @@
             <div class="div_container">
                 <div class="footer_description">
                     <h1 id="fitness">Fitness</h1>
-                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                    <p>Stay connected with us for the latest in fitness tips, workout routines, and health insights. Your journey to a healthier, stronger you starts here.</p>
                 </div>
                 <div class="get_started">
                     <div>
