ready for submit

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h1 class="run_title">Run an Extra 
                     Mile Easily</h1>
                 <p class="run_subtitle">Gradually increase your running distance. Build endurance and stamina over time.</p>
-                <button class="runbtn">Join Now</button>
+                <button class="run_btn">Join Now</button>
             </div>
             <img src="images/run.jpg" alt="" class="run_img" height="100%">
          </section>
